Changelog
=========


1.15.2 (unreleased)
-------------------

- Added ``plone_upgrade`` command to upgrade a Plone Site.
  This is what you would manually do in the ``@@plone-upgrade`` view.
  [maurits]

- Prevented UnicodeEncodeError when piping output of ``bin/upgrade
  sites``.  This would fail when a site had non-ascii characters in
  its title.
  [maurits]


1.15.1 (2015-11-11)
-------------------

- Change instance detection to support any name.
  Before only "instance*" was supported.
  [jone]


1.15.0 (2015-10-30)
-------------------

- Make "blessed" dependency optional in the "colors" extras.
  [jone]

- Update references to class-migrated objects in the intid utility.
  [deiferni]


1.14.8 (2015-09-21)
-------------------

- Migrate workflow states with wfhistory migration and do not set state manually unless necessary.
  [tschanzt]


1.14.7 (2015-08-27)
-------------------

- Add an afterCommitHook that notifies about the transaction having been
  committed (or aborted) after installing upgrades.
  [lgraf]

- Fix authentication problem with bin/upgrade command.
  [jone]


1.14.6 (2015-07-22)
-------------------

- Return context manager to allow "as" statements.
  [lknoepfel]


1.14.5 (2015-05-20)
-------------------

- Update quickinstaller product version when upgrading a package.
  [jone]


1.14.4 (2015-04-09)
-------------------

- Fix post upgrade ordering which was broken since 1.11.0.
  [jone]


1.14.3 (2015-03-29)
-------------------

- Fix error in upgrade-step:directory directive.
  The error occured when the directory was a subdirectory relative to the
  ZCML directory, causing the package module to be replaced with the
  upgrades package directory in sys.modules.
  [jone]

- Fix issue with transaction note length when a large not already exists.
  When the transaction note already has maximum length (e.g. with Archetypes notes),
  nothing more should be added.
  Also increased the threshold back (reduced in 1.14.2).
  [jone]

